tests/errors/packages.vir
import packages

// CHECK: Unresolved import: does_not_exist
import does_not_exist

mod Top {
}
